--- a/research.html
+++ b/research.html
@@ -42,43 +42,43 @@
 
 	<main style="display: inline-block; align-content: center; width: 100%; height:3000px ">
 
-		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain; " src="images/research1.png "></div>
+		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain; " src="images/research1.PNG "></div>
 
 
-		<div class="image1"><a href="https://www.britannica.com/technology/database" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research11.png"></a></div>
+		<div class="image1"><a href="https://www.britannica.com/technology/database" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research11.PNG"></a></div>
 
 		<div class="text"><p style=" font-family: 'Work Sans', sans-serif;;">This navigation bar for my website was inspired from britannica website. The navigation bar contains a hover effect with solid line above the texts. It contains a smooth in-out transition.</p></div>
 		<div class="text1"><p style=" font-family: 'Work Sans', sans-serif;"> This is the navigation bar of britannica website. It contains a hover effect with solid line below the texts. It contains a smooth in-out transition. Click on the image above to visit the website.</p></div>
 
-		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research2.png"></div>
+		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research2.PNG"></div>
 
 
-		<div class="image1"><a href="https://www.samsung.com/us/" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research22.png"></a></div>
+		<div class="image1"><a href="https://www.samsung.com/us/" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research22.PNG"></a></div>
 
 		<div class="text"><p style=" font-family: 'Work Sans', sans-serif;">This is the footer section of my index page. It contains links to my social media accounts:
 		facebook,twitter,instagram and reddit. The icons have a hover effect too. This concept was inspired from samsung's official account.</p></div>
 		<div class="text1"><p style=" font-family: 'Work Sans', sans-serif;">This is the footer section of samsung's official page. It contains links to their various social media accounts. Click the image above to visit the webiste.</p></div>
 
-		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain; margin: 0 auto;" src="images/research33.png"></div>
+		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain; margin: 0 auto;" src="images/research33.PNG"></div>
 
 
-		<div class="image1"><a href="http://demo.deviserweb.com/cv/" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research333.png"></a></div>
+		<div class="image1"><a href="http://demo.deviserweb.com/cv/" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research333.PNG"></a></div>
 
 		<div class="text"><p style=" font-family: 'Work Sans', sans-serif;">This is the content in my CV which represents my skills in different programming languages. This idea was taken from  a CV demo from deviserweb.com. It shows a line representing the percentage at right which gives idea of my overall knowledge in each programming language.</p></div>
 		<div class="text1"><p style=" font-family: 'Work Sans', sans-serif;"> This is representation of skills part of a CV demo. It contains a line that represents the skill a person has in each field. Click on the above image to see the demo.</p></div>
 
-		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research4.png"></div>
+		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research4.PNG"></div>
 
 
-		<div class="image1"><a href="https://searchsqlserver.techtarget.com/definition/database" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research44.png"></a></div>
+		<div class="image1"><a href="https://searchsqlserver.techtarget.com/definition/database" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/research44.PNG"></a></div>
 
 		<div class="text"><p style=" font-family: 'Work Sans', sans-serif;"> This is the image of article title for my blog page along with a small round image and my name. This layout was inspired from techtarget website. The image is situated at bottom left corner with name and topic on the right.</p></div>
 		<div class="text1"><p style=" font-family: 'Work Sans', sans-serif;">This image contains the detail of a author from certain artcile in techtarget website. It contains a small round image of author at the left along with her name on right. CLick on the above image to visit the website.</p></div>
 
-		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain" src="images/aboutus.png"></div>
+		<div class="image"><img style="height: 100%; width: 100%; object-fit: contain" src="images/aboutus.PNG"></div>
 
 
-		<div class="image1"><a href="https://blog.hubspot.com/service/best-contact-us-pages" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/aboutus1.png"></a></div>
+		<div class="image1"><a href="https://blog.hubspot.com/service/best-contact-us-pages" target="_blank"><img style="height: 100%; width: 100%; object-fit: contain" src="images/aboutus1.PNG"></a></div>
 
 		<div class="text"><p style=" font-family: 'Work Sans', sans-serif; box-shadow: none;">  The above image is the contact us form of my web site. It allows user to send thier information to us so that we can reach out to them. If any user leaves a blank space an alert message will be shown.</p></div>
 		<div class="text1"> <p style=" font-family: 'Work Sans', sans-serif;">This is the contact us form that was found on bugspot.com. It allows user to provide their information to the company. Click the above image to check the webpage.</p></div>
